--- a/index.html
+++ b/index.html
@@ -9,11 +9,79 @@
     <title>Joaquín Ruiz - Frontend Developer - UX/UI Designer</title>
     <meta name=“description” content="Portfolio personal sobre desarrollo web y diseño." />
     <link rel="stylesheet" href="/css/styles.css">
+    <link rel="icon" type="image/png" href="/assets/img/favicon.png">
+
 
 </head>
 
 <body>
-    <main >
+        <!---------------- Animación Inicial --------------->
+
+
+    <section class="container-animation">
+
+        <div class="animation__line 1">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+        <div class="animation__line 2">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+
+        <div class="animation__line 3">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+
+        <div class="animation__line 4">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+        <div class="animation__line 5">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+        <div class="animation__line 6">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+        <div class="animation__line 7">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+        <div class="animation__line 8">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+        <div class="animation__line 9">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+        <div class="animation__line 10">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+        <div class="animation__line 11">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+        <div class="animation__line 12">
+            <div>Front-end <span class="borderAnimation"> Developer</span> | UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+        <div class="animation__line 13">
+            <div>Front-end <span class="borderAnimation"> Developer</span> |  UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+        <div class="animation__line 14">
+            <div>Front-end <span class="borderAnimation"> Developer</span> |  UX/UI <span class="borderAnimation"> Designer</span></div>
+        </div>
+
+
+    </section>
+
+
+    <main  >
 
         <!---------------- Cabecera --------------->
 
@@ -38,15 +106,15 @@
         <section class="hero-container container ">
             <h1 class="hero__title marginRight">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer ut
                 sagittis eros,
-                sit amet mattis velit. Aliquam erat volutpat. Nullam quis nisl et tortor gravida maximus.
+                sit amet mattis velit. Aliquam erat volutpat. Nullam quis nisl et tortor gravida maximus. 
             </h1>
         </section>
 
 
         <!---------------- Work --------------->
 
-        <section id="work" class="work-container container">
-            <h2 class="work__title">Work</h2>
+        <section  class="work-container container ">
+            <h2 id="work" class="work__title ">Work</h2>
 
             <article class="work__project marginRight">
 
@@ -165,10 +233,10 @@
 
         <!---------------- About --------------->
 
-        <section id="about" class="about-container container">
-            <h2 class="about__title">About</h2>
+        <section id="about"  class="about-container container ">
+            <h2   class="about__title ">About</h2>
 
-            <div class="about__texts marginRight">
+            <div  class="about__texts marginRight">
 
                 <p class="about__texts__element">
                     ¿Sabes cuántas veces he ayudado a mis <span class="about__texts__hover">padres</span> a comprar en Amazon? ¿O a escuchar a Luis Miguel en Spotify? ¿Y adjuntar un pdf al email?
@@ -469,9 +537,9 @@
         <!---------------- Contact --------------->
 
 
-        <section id="contact" class="contact-container container">
-            <h2 class="contact__title">Contact</h2>
-            <secction class="contact__info ">
+        <section  class="contact-container container ">
+            <h2 id="contact" class="contact__title ">Contact</h2>
+            <secction  class="contact__info ">
 
                 <a class="contact__info__anchor" href="mailto:joaquinruizbueno@gmail.com" target="_blank">Email</a>
                 <hr class="contact__info__line marginRight">
@@ -516,7 +584,22 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.9.1/ScrollTrigger.min.js"
     integrity="sha512-5efjkDjhldlK+BrHauVYJpbjKrtNemLZksZWxd6Wdxvm06dceqWGLLNjZywOkvW7BF032ktHRMUOarbK9d60bg=="
     crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script type="text/javascript" src="./js/main.js"></script>
+
+
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TweenMax.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.0.2/TimelineMax.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/ScrollMagic.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.6/plugins/animation.gsap.min.js"></script>
+
+
+    <script  type="text/javascript" src="./js/hoverAnimation.js"></script>
+    <script  type="text/javascript" src="./js/textAnimation-1.js"></script>
+    <script  type="text/javascript" src="./js/textAnimation-2.js"></script>
+    <script  type="text/javascript" src="./js/textAnimation-3.js"></script>
+
+    <script  type="text/javascript" src="./js/introAnimation.js"></script>
+
 
 
 </html>
