FIX hover sobre los proyectos que impedia hacer click

--- a/index.html
+++ b/index.html
@@ -146,10 +146,12 @@
             <article class="work__project marginRight">
 
                 <h3 class="project__title"> HiArchi</h3>
+                <div class="project__miniature">
+                    <a href="https://hiarchi.es" target='_blank' class="project__view">
+                        <img src="./assets/img/hiarchi@2x.png" alt="Portada proyecto HiArchi" class="project__img">
+                    </a>
 
-                <a href="https://hiarchi.es" target='_blank' class="project__view">
-                    <img src="./assets/img/hiarchi@2x.png" alt="Portada proyecto HiArchi" class="project__img">
-                </a>
+                </div>
 
                 <div class="project__info flex">
 
@@ -178,10 +180,11 @@
             <article class="work__project marginRight">
 
                 <h3 class="project__title"> Weather App</h3>
-                <a href="https://github.com/joaruibu/Weather-web" target='_blank' class="project__view">
-                    <img src="./assets/img/weather@2x.png" alt="Portada proyecto Weather App" class="project__img">
-                </a>
-
+                <div class="project__miniature">
+                    <a href="https://github.com/joaruibu/Weather-web" target='_blank' class="project__view">
+                        <img src="./assets/img/weather@2x.png" alt="Portada proyecto Weather App" class="project__img">
+                    </a>
+                </div>
 
                 <div class="project__info flex">
 
@@ -207,11 +210,14 @@
             <article class="work__project marginRight">
 
                 <h3 class="project__title"> Black jack</h3>
-                <a href="https://joaruibu.github.io/black-jack-game/" target='_blank' class="project__view">
-                    <img src="./assets/img/black_jack@2x.png" alt="Portada proyecto Black jack" class="project__img">
 
-                </a>
+                <div class="project__miniature">
+                    <a href="https://joaruibu.github.io/black-jack-game/" target='_blank' class="project__view">
+                        <img src="./assets/img/black_jack@2x.png" alt="Portada proyecto Black jack"
+                            class="project__img">
 
+                    </a>
+                </div>
 
                 <div class="project__info flex">
 
@@ -238,11 +244,16 @@
             <article class="work__project marginRight">
 
                 <h3 class="project__title"> To do </h3>
-                <a href="https://joaruibu.github.io/ToDo-portfolio/" target='_blank' title="Ver proyecto To do"
-                    class="project__view">
-                    <img src="./assets/img/todo@2x.png" alt="Portada proyecto To do" class="project__img">
 
-                </a>
+
+                <div class="project__miniature">
+                    <a href="https://joaruibu.github.io/ToDo-portfolio/" target='_blank' title="Ver proyecto To do"
+                        class="project__view">
+                        <img src="./assets/img/todo@2x.png" alt="Portada proyecto To do" class="project__img">
+
+                    </a>
+
+                </div>
 
 
                 <div class="project__info flex">
