Actualizado experiencia laboral agosto-22

--- a/index.html
+++ b/index.html
@@ -323,7 +323,8 @@
 
 
                 <p class="about__texts__element ">
-                    Ahora mismo estoy en búsqueda de una empresa donde seguir desarrollándome profesionalmente.
+                    Ahora mismo trabajo en Fourvenues junto a un equipo de desarrolladores que me ayudan a ser un mejor
+                    profesional.
 
                 </p>
 
@@ -342,6 +343,20 @@
                 <h2 class="resume__title">Resume</h2>
                 <h3 class="about__subtitle">Experiencia Laboral</h3>
 
+                <section class="about__info marginRight">
+                    <span class="about__info__data"> Jun' 22 - Act</span>
+
+                    <div class="about__info__texts">
+                        <h4 class="about__info__title">Front-end Engineer | Fourvenues</h4>
+
+                        <p class="about__info__paragraph">
+                            Colaboración en diseño, desarrollo e implemeantación de un nuevo sistema de diseño.
+                            Creación de componente parametrizados en Angular.
+                        </p>
+                        <p>Angular | HTML5 | Tailwind | Javascript | Bitbucket | Norion</p>
+
+                    </div>
+                </section>
 
                 <section class="about__info marginRight">
                     <span class="about__info__data"> Feb' 21 - Act</span>
@@ -359,11 +374,10 @@
                             <li>- La idea del producto buscando solucionar un problema y una necesidad.</li>
                             <li>- Wireframes, mock-ups, flujos de usuario en Adobe Xd.</li>
                             <li>- Copies, todo el texto de la web.</li>
-                            <li>- Desarrollo web (Responsive Design) usando <strong>HTML - CSS -Javascript</strong> .
+                            <li>- Desarrollo web (Responsive Design) usando <strong>HTML5 | CSS | Javascript</strong> .
                             </li>
                         </ul>
                     </div>
-
                 </section>
 
                 <section class="about__info marginRight">
@@ -393,7 +407,6 @@
                             Y ahora, todo esto lo aplico al diseño y desarrollo web. :)
                         </p>
                     </div>
-
                 </section>
 
                 <section class="about__info marginRight">
