cambio errata notion en work experience y nombre cv

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                     <li class="cabecera__menu__elemento"><a href="#resume">Resume</a></li>
                     <li class="cabecera__menu__elemento"><a href="#contact">Contact</a></li>
                     <li class="cabecera__menu__elemento cabecera__menu__elemento--mod"><a download
-                            href="./assets/cv/JoaquínRuiz-CV.pdf">CV↓</a></li>
+                            href="./assets/cv/Joaquín-Ruiz-CV.pdf">CV↓</a></li>
 
                 </ul>
             </div>
@@ -353,7 +353,7 @@
                             Colaboración en diseño, desarrollo e implemeantación de un nuevo sistema de diseño.
                             Creación de componente parametrizados en Angular.
                         </p>
-                        <p>Angular | HTML5 | Tailwind | Javascript | Bitbucket | Norion</p>
+                        <p>Angular | HTML5 | Tailwind | Javascript | Bitbucket | Notion</p>
 
                     </div>
                 </section>
