Added caad project

--- a/index.html
+++ b/index.html
@@ -179,6 +179,40 @@
 
             <article class="work__project marginRight">
 
+                <h3 class="project__title"> caaad.pro</h3>
+                <div class="project__miniature">
+                    <a href="https://caaad.pro" target='_blank' class="project__view">
+                        <img src="./assets/img/caaad@2x.png" alt="Portada proyecto caaad.pro" class="project__img">
+                    </a>
+                </div>
+
+                <div class="project__info flex">
+
+                    <p class="project__info__text">Tenía miles de bloques de Autocad, y decidí crear una web para
+                        compartirlos con quien los necesite. <br> Todos bien ordenaditos con
+                        sus filtros.
+                        <br> Y de paso aprendía un poco de backend.
+                    </p>
+
+                    <div class="project__info__details">
+                        <ul class="project__info__skills ">
+                            <li>Next.js</li>
+                            <li>React</li>
+                            <li>MongoDB</li>
+                            <li>Tailwind</li>
+                            <li>JavaScript</li>
+                            <li>Ui Design</li>
+                            <li>Adobe Xd</li>
+                        </ul>
+                        <a class="project__info__code" target='_blank' title="Ver código del proyecto"
+                            href="https://github.com/joaruibu/caaad-next.js"> Ver código</a>
+                    </div>
+
+                </div>
+            </article>
+
+            <article class="work__project marginRight">
+
                 <h3 class="project__title"> Weather App</h3>
                 <div class="project__miniature">
                     <a href="https://github.com/joaruibu/Weather-web" target='_blank' class="project__view">
@@ -344,7 +378,7 @@
                 <h3 class="about__subtitle">Experiencia Laboral</h3>
 
                 <section class="about__info marginRight">
-                    <span class="about__info__data"> Jun' 22 - Act</span>
+                    <span class="about__info__data"> May' 22 - Act</span>
 
                     <div class="about__info__texts">
                         <h4 class="about__info__title">Front-end Engineer | Fourvenues</h4>
